--- a/pom.xml
+++ b/pom.xml
@@ -1,177 +1,179 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  Copyright 2013 Xi CHEN
-  
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-  
-     http://www.apache.org/licenses/LICENSE-2.0
-  
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
-  -->
+<!-- Copyright 2013 Xi CHEN Licensed under the Apache License, Version 2.0 
+	(the "License"); you may not use this file except in compliance with the 
+	License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
+	Unless required by applicable law or agreed to in writing, software distributed 
+	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
+	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
+	the specific language governing permissions and limitations under the License. -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  
-  <modelVersion>4.0.0</modelVersion>
-  <name>GWT Storage</name>
-  
-  <groupId>com.seanchenxi.gwt</groupId>
-  <artifactId>gwt-storage</artifactId>
-  <version>1.2-SNAPSHOT</version>
-  
-  <url>https://github.com/seanchenxi/gwt-storage</url>
-  <description>GWT Client-side Storage API extension</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <organization>
-    <name>seanchenxi.com</name>
-    <url>http://seanchenxi.com/</url>
-  </organization>
+	<modelVersion>4.0.0</modelVersion>
+	<name>GWT Storage</name>
 
-  <issueManagement>
-    <system>GitHub Issues</system>
-    <url>https://github.com/seanchenxi/gwt-storage/issues</url>
-  </issueManagement>
+	<groupId>com.seanchenxi.gwt</groupId>
+	<artifactId>gwt-storage</artifactId>
+	<version>1.2-SNAPSHOT</version>
 
-  <licenses>
-    <license>
-      <name>Apache License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
+	<url>https://github.com/seanchenxi/gwt-storage</url>
+	<description>GWT Client-side Storage API extension</description>
 
-  <developers>
-    <developer>
-      <id>seanchenxi</id>
-      <name>Xi Chen</name>
-      <email>xi@seanchenxi.com</email>
-    </developer>
-  </developers>
+	<organization>
+		<name>seanchenxi.com</name>
+		<url>http://seanchenxi.com/</url>
+	</organization>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <gwt.version>2.5.1</gwt.version>
-    <gwt.maven.version>2.5.1</gwt.maven.version>        
-    <maven.compiler.source>1.6</maven.compiler.source>
-    <maven.compiler.target>1.6</maven.compiler.target>  
-    <plugin.maven.compiler.version>3.0</plugin.maven.compiler.version>
-    <plugin.maven.surefire.version>2.15</plugin.maven.surefire.version>
-    <plugin.maven.source.version>2.1.2</plugin.maven.source.version>    
-    <plugin.maven.jar.version>2.4</plugin.maven.jar.version>
-    <plugin.maven.javadoc.version>2.9</plugin.maven.javadoc.version>
-  </properties>
+	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>https://github.com/seanchenxi/gwt-storage/issues</url>
+	</issueManagement>
 
-  <dependencies>
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
 
-    <dependency>
-      <groupId>com.google.gwt</groupId>
-      <artifactId>gwt-user</artifactId>
-      <version>${gwt.version}</version>
-      <scope>provided</scope>
-    </dependency>
+	<developers>
+		<developer>
+			<id>seanchenxi</id>
+			<name>Xi Chen</name>
+			<email>xi@seanchenxi.com</email>
+		</developer>
+	</developers>
 
-    <dependency>
-      <groupId>com.google.gwt</groupId>
-      <artifactId>gwt-dev</artifactId>
-      <version>${gwt.version}</version>
-      <scope>provided</scope>
-    </dependency>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<gwt.version>2.5.1</gwt.version>
+		<gwt.maven.version>2.5.1</gwt.maven.version>
+		<maven.compiler.source>1.6</maven.compiler.source>
+		<maven.compiler.target>1.6</maven.compiler.target>
+		<plugin.maven.compiler.version>3.0</plugin.maven.compiler.version>
+		<plugin.maven.surefire.version>2.15</plugin.maven.surefire.version>
+		<plugin.maven.source.version>2.1.2</plugin.maven.source.version>
+		<plugin.maven.jar.version>2.4</plugin.maven.jar.version>
+		<plugin.maven.javadoc.version>2.9</plugin.maven.javadoc.version>
+	</properties>
 
-  </dependencies>
-  
-  <scm>
-    <url>https://github.com/seanchenxi/gwt-storage</url>
-    <connection>scm:git:git://github.com/seanchenxi/gwt-storage.git</connection>
-    <developerConnection>scm:git:seanchenxi@github.com:seanchenxi/gwt-storage.git</developerConnection>
-  </scm>
+	<dependencies>
 
-  <build>
+		<dependency>
+			<groupId>com.google.gwt</groupId>
+			<artifactId>gwt-user</artifactId>
+			<version>${gwt.version}</version>
+			<scope>provided</scope>
+		</dependency>
 
-    <resources>
-      <resource>
-        <directory>src/main/java</directory>
-      </resource>
-      <resource>
-        <directory>src/main/resources</directory>
-      </resource>
-    </resources>
-    
-    <plugins>
+		<dependency>
+			<groupId>com.google.gwt</groupId>
+			<artifactId>gwt-dev</artifactId>
+			<version>${gwt.version}</version>
+			<scope>provided</scope>
+		</dependency>
 
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>gwt-maven-plugin</artifactId>
-        <version>${gwt.maven.version}</version>
-        
-      </plugin>
+	</dependencies>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>${plugin.maven.compiler.version}</version>
-        <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
-        </configuration>
-      </plugin>
+	<scm>
+		<url>https://github.com/seanchenxi/gwt-storage</url>
+		<connection>scm:git:git://github.com/seanchenxi/gwt-storage.git</connection>
+		<developerConnection>scm:git:seanchenxi@github.com:seanchenxi/gwt-storage.git</developerConnection>
+	</scm>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>${plugin.maven.jar.version}</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-              <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-            </manifest>
-          </archive>
-        </configuration>
-      </plugin>
+	<build>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>${plugin.maven.javadoc.version}</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
-        <version>${plugin.maven.source.version}</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+		<plugins>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>${plugin.maven.surefire.version}</version>
-        <configuration>
-          <skipTests>true</skipTests>
-        </configuration>
-      </plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>gwt-maven-plugin</artifactId>
+				<version>${gwt.maven.version}</version>
 
-    </plugins>
-  </build>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${plugin.maven.compiler.version}</version>
+				<configuration>
+					<source>${maven.compiler.source}</source>
+					<target>${maven.compiler.target}</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>${plugin.maven.jar.version}</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>${plugin.maven.javadoc.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>${plugin.maven.source.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${plugin.maven.surefire.version}</version>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
+
+		</plugins>
+	</build>
+
+	<distributionManagement>
+		<repository>
+			<id>appjangle-releases</id>
+			<url>${repos.appjangle-releases}</url>
+		</repository>
+		<snapshotRepository>
+			<id>appjangle-snapshots</id>
+			<url>${repos.appjangle-snapshots}</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 </project>
